--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib": "lib"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
