--- a/config/config.env
+++ b/config/config.env
@@ -2,4 +2,7 @@ NODE_ENV=development
 PORT=3000
 
 MONGO_URI=mongodb+srv://ubi:BrwcR0JR6NEvJnJO@cluster0.0trdh.mongodb.net/blogDB?retryWrites=true&w=majority
+MONGO_URI_LOCAL=mongodb://localhost:27017/Alog
+
+
 
