--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "blog",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "directories": {
-    "lib": "lib"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "colors": "^1.4.0",
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "mongoose": "^6.0.12",
-    "slugify": "^1.6.2"
-  },
-  "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "dev": "nodemon server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wematujames/blog.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wematujames/blog/issues"
-  },
-  "homepage": "https://github.com/wematujames/blog#readme"
+	"name": "blog",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"directories": {
+		"lib": "lib"
+	},
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"colors": "^1.4.0",
+		"connect-mongo": "^4.6.0",
+		"dotenv": "^10.0.0",
+		"ejs": "^3.1.6",
+		"express": "^4.17.1",
+		"express-session": "^1.17.2",
+		"mongoose": "^6.0.12",
+		"passport-google-oauth20": "^2.0.0",
+		"slugify": "^1.6.2"
+	},
+	"scripts": {
+		"start": "NODE_ENV=production node server.js",
+		"dev": "nodemon server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/wematujames/blog.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/wematujames/blog/issues"
+	},
+	"homepage": "https://github.com/wematujames/blog#readme"
 }
