fix errors from project overhaul
fix errors such as reference errors that arose from the reshuffle of the project

--- a/config/config.env
+++ b/config/config.env
@@ -1,8 +1,10 @@
 NODE_ENV=development
-PORT=3000
+PORT=5000
 
-MONGO_URI=mongodb+srv://ubi:BrwcR0JR6NEvJnJO@cluster0.0trdh.mongodb.net/blogDB?retryWrites=true&w=majority
-MONGO_URI_LOCAL=mongodb://localhost:27017/Alog
+MONGO_URI=mongodb+srv://ubi:7TGVoQf1OSDkz75K@cluster0.0trdh.mongodb.net/alogDB?retryWrites=true&w=majority
+MONGO_URI_LOCAL=mongodb://0.0.0.0:27017/AlogDB
 
 
+JWT_SECRET=ASDFSF%AS8FS6S7DF%SADF5A$$ASDF9QE
+JWT_EXPIRESIN=30d
 
