--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
 		"express-session": "^1.17.2",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.0.12",
+		"nodemailer": "^6.7.2",
 		"passport-google-oauth20": "^2.0.0",
 		"slugify": "^1.6.2"
 	},
