--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"express-session": "^1.17.2",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.0.12",
+		"morgan": "^1.10.0",
 		"nodemailer": "^6.7.2",
 		"passport-google-oauth20": "^2.0.0",
 		"slugify": "^1.6.2"
